[package]
name = "doorbell"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.7", features = ["ws"] }
tokio = { version = "1.0", features = ["full"] }
rppal = "0.19.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.6.1", features = ["fs", "trace"] }
futures = "0.3.31"
